added the ability to recognize yourself by the session
