# docs/swagger.json
@@ -4,6 +4,21 @@
         "contact": {}
     },
     "paths": {
+        "/meDetails": {
+            "get": {
+                "tags": [
+                    "Пользователи"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                }
+            }
+        },
         "/signIn": {
             "post": {
                 "tags": [
